ipc/ipdl/test/ipdl/error/undeclParamType.ipdl
protocol undeclParamType {

child: async Msg(FARGLEGARGLE p);

};
